btn-link: Fix box-shadow overlapping

--- a/css/draft.css
+++ b/css/draft.css
@@ -36,9 +36,9 @@ h1 {
 
 a.btn-link {
     font-size: 20px;
-    box-shadow: 0 14px 25px rgba(0,0,0,0.16);
-    -webkit-box-shadow: 0 14px 25px rgba(0,0,0,0.16);
-    -moz-box-shadow: 0 14px 25px rgba(0,0,0,0.16);
+    box-shadow: 0 14px 14px rgba(0,0,0,0.16);
+    -webkit-box-shadow: 0 14px 14px rgba(0,0,0,0.16);
+    -moz-box-shadow: 0 14px 14px rgba(0,0,0,0.16);
     display: inline-block;
     padding: .5em 1em;
     margin: 0 .2em;
@@ -56,7 +56,7 @@ a.btn-link img {
 }
 a.btn-link:hover {
     color: #a20025;
-    box-shadow: 0 14px 25px rgba(0,0,0,.3);
+    box-shadow: 0 14px 14px rgba(0,0,0,.3);
 }
 @media all and (max-width: 60em) {
     .container-centered {
